# CodeHound

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_llvm.py  manage.py
.agents/skills/codehound/: SKILL.md
.agents/skills/codehound/scripts/: query_graph.py
backend/: agent_demo.py  agent_tools.py  main.py  requirements.txt  test_demo_flow.py  watcher.py
backend/schema/CodeGraph/: Edge.py  EdgeType.py  GraphPayload.py  Node.py  NodeType.py
docs/: Requirements_Analysis.md
engine/src/: graph_engine.cpp  graph_engine.h  graph_generated.h  pybind_wrapper.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  style.css
parser/: codegraph_parser.py
parser/src/: ast_visitor.cpp  ast_visitor.h  main.cpp
schema/: graph.fbs
scripts/: mock_generator.py
tests/dummy_project/: Animal.h  Dog.cpp  Dog.h  main.cpp
